# control-panel

./: README.md  angular.json  package-lock.json  package.json
cash-manager-be/: .gitignore  README.MD  pom.xml
conotrol-panel-fe/src/: styles.scss
conotrol-panel-fe/src/styles/: _variables.scss
control-panel-fe/: angular.json
control-panel-fe/src/: index.html  styles.scss
control-panel-fe/src/app/: app.config.ts  app.routes.ts  app.ts
control-panel-fe/src/environments/: environment.production.ts  (+1 more)
news-collector-be/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
news-collector-be/docs/: docs.go  swagger.json  swagger.yaml
news-collector-be/resources/: local_data.sql  schema.sql  test_data.sql
src/: index.html
src/app/: app.html  app.spec.ts  app.ts
weight-record-be/: .gitignore  README.md  pyproject.toml  run.py  test.db
weight-record-be/app/: main.py
weight-record-be/app/api/: dependencies.py
weight-record-be/app/api/routers/: exercises.py  healthz.py
weight-record-be/app/api/schemas/: exercises.py
weight-record-be/app/core/: configs.py  database.py  logging.py  middleware.py
weight-record-be/app/exercises/models/: exercise.py
weight-record-be/app/exercises/repositories/: exercises_repository.py
weight-record-be/app/exercises/services/: exercises_service.py
weight-record-be/resources/: local_data.sql  schema.sql  test_data.sql
weight-record-be/tests/: conftest.py
weight-record-be/tests/integration/: conftest.py  test_exercises_api.py  test_healthz_api.py
weight-record-be/tests/unit/: test_exercises.py
(+128 files in other folders)
