[project]
name = "weight-record-api"
version = "0.0.1"
description = "Weigh Record API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi_swagger2==0.2.4",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "uvicorn==0.34.0",
    "pydantic_settings==2.0.3",
    "pydantic",
    "starlette-context==0.3.6",
    "otel-extensions==1.0.1",
    "redis==5.0.7",
    "google-auth==2.40.3",
    "iso639-lang==2.6.3",
    "toml==0.10.2",
    "requests==2.32.5",
    "SQLAlchemy==2.0.44"
]


[tool.pytest.ini_options]
pythonpath = [
  ".", "app"
]
log_cli = true
log_cli_level = "DEBUG"